# inrof_swerm

./: .gitignore  CMakeLists.txt
include/: Boid.hpp  follower.hpp  leader_follower.hpp
src/: Boid.cpp  follower.cpp  leader_follower.cpp
